diagnostics.txt
Parsed Rust Compiler Output:

--- Message 1 ---
Level: error
Message: unresolved import `rust_mcp_schema::RpcErrorCodes`
File: src-tauri\src\mcp\handler.rs
Location: Line 18, Column 5
Label: no `RpcErrorCodes` in the root
Code Context:     RpcErrorCodes,             // Enum for standard RPC error codes
  help: consider importing this enum instead:
rust_mcp_schema::schema_utils::RpcErrorCodes
Full Rendered Output:
error[E0432]: unresolved import `rust_mcp_schema::RpcErrorCodes`
  --> src-tauri\src\mcp\handler.rs:18:5
   |
18 |     RpcErrorCodes,             // Enum for standard RPC error codes
   |     ^^^^^^^^^^^^^ no `RpcErrorCodes` in the root
   |
   = help: consider importing this enum instead:
           rust_mcp_schema::schema_utils::RpcErrorCodes




--- Message 2 ---
Level: error
Message: no method named `read_text_file` found for reference `&AppHandle` in the current scope
File: src-tauri\src\mcp\tool_impl\edit.rs
Location: Line 68, Column 39
Label: method not found in `&AppHandle`
Code Context:     let original_content = app_handle.read_text_file(FilePath::Path(path.clone()), None)
Full Rendered Output:
error[E0599]: no method named `read_text_file` found for reference `&AppHandle` in the current scope
  --> src-tauri\src\mcp\tool_impl\edit.rs:68:39
   |
68 |     let original_content = app_handle.read_text_file(FilePath::Path(path.clone()), None)
   |                                       ^^^^^^^^^^^^^^ method not found in `&AppHandle`




--- Message 3 ---
Level: error
Message: no method named `write_text_file` found for reference `&AppHandle` in the current scope
File: src-tauri\src\mcp\tool_impl\edit.rs
Location: Line 89, Column 5
Code Context:     app_handle.write_text_file(
Full Rendered Output:
error[E0599]: no method named `write_text_file` found for reference `&AppHandle` in the current scope
  --> src-tauri\src\mcp\tool_impl\edit.rs:89:16
   |
89 |     app_handle.write_text_file(
   |     -----------^^^^^^^^^^^^^^^ method not found in `&AppHandle`